--- a/GameOfPhones.csproj
+++ b/GameOfPhones.csproj
@@ -11,8 +11,7 @@
     <RootNamespace>GameOfPhones</RootNamespace>
     <AssemblyName>GameOfPhones</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -76,12 +75,18 @@
     <Compile Include="AdvancedSearch.Designer.cs">
       <DependentUpon>AdvancedSearch.cs</DependentUpon>
     </Compile>
+    <Compile Include="Camera.cs" />
+    <Compile Include="Carrier.cs" />
+    <Compile Include="ChargePort.cs" />
     <Compile Include="Compare.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Compare.Designer.cs">
       <DependentUpon>Compare.cs</DependentUpon>
     </Compile>
+    <Compile Include="CPU.cs" />
+    <Compile Include="Display.cs" />
+    <Compile Include="Feature.cs" />
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +111,10 @@
     <Compile Include="HelpInfo.Designer.cs">
       <DependentUpon>HelpInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manufacturer.cs" />
+    <Compile Include="Network.cs" />
+    <Compile Include="OS.cs" />
+    <Compile Include="Phone.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultsForm.cs">
@@ -114,6 +123,7 @@
     <Compile Include="ResultsForm.Designer.cs">
       <DependentUpon>ResultsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sensor.cs" />
     <EmbeddedResource Include="AdvancedSearch.resx">
       <DependentUpon>AdvancedSearch.cs</DependentUpon>
     </EmbeddedResource>
